[project]
name = "quantinuum_sphinx"
version = "0.7.0rc1"
description = ""
authors = [
  { name = "Aidan Keay", email = "aidan.keay@quantinuum.com" },
  { name = "Irfan Khan", email = "irfan.khan@quantinuum.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
furo = "^2024.5.6"

[tool.poetry]
include = [
    { path = "quantinuum_sphinx/page.html", format = ["sdist", "wheel"] },
    { path = "quantinuum_sphinx/static", format = ["sdist", "wheel"] },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.entry-points]
"sphinx.html_themes" = { quantinuum_sphinx = "quantinuum_sphinx" }
